feat: adicionado lib do framer-motion

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.11",
+    "framer-motion": "^11.2.6",
     "hamburger-react": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
