finalização do projeto

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.11",
-    "framer-motion": "^11.2.6",
     "hamburger-react": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
+    "@swc/plugin-styled-components": "^2.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
   }
